Sun Jun  1 23:56:21 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/InfoRepo/FederatorConfig.inl:
        * dds/InfoRepo/FederatorManagerImpl.inl:
        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Fuzz

Fri May 30 20:39:48 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Set reliability QOS, wait for acks.

        * tests/DCPS/ManyToMany:

          svn:ignore

Fri May 30 17:56:32 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepoServ.cpp:

          Changed to use a method to definitely identify it the
          FederationId was defaulted.

        * dds/InfoRepo/FederatorConfig.h:
        * dds/InfoRepo/FederatorConfig.inl:
        * dds/InfoRepo/FederatorConfig.cpp:
        * dds/InfoRepo/FederatorManagerImpl.h:
        * dds/InfoRepo/FederatorManagerImpl.inl:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/UpdateListener_T.h:
        * dds/InfoRepo/UpdateListener_T.cpp:

          Added tracking if the FederationId was defaulted (or set)
          and cleaned up some of the (essentially) public data members.

Fri May 30 16:02:26 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Roll back QOS setting - causing crash.

Fri May 30 15:26:46 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorConfig.cpp:

          Changed random function name to avoid build errors.

Fri May 30 12:16:58 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/InfoRepo/FederatorConfig.h:
        * dds/InfoRepo/FederatorConfig.cpp:

          Added a static constant variable to be the default FederatedId